@@ -1,4 +1,8 @@
 
+Version Next
+
+    - Added Twilio ErrorCodes.java
+
 Version 1.0.54 Released April 2, 2012
 
     - Fix typo in enum SMSStatus.SEND -> SMSStatus.SENT
